Bug 486568 - Desktop wallpaper previews are shuffling infinitely in System Settings Wallpaper KCM when user selects Wallpaper type: Slideshow and Order: Date modified (newest first)
Summary: Desktop wallpaper previews are shuffling infinitely in System Settings Wallpa...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: 6.0.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-05-04 12:38 UTC by Filip
Modified: 2024-06-08 04:45 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.0
Sentry Crash Report:


Attachments
bug-demonstration (3.13 MB, video/webm)
2024-05-04 12:40 UTC, Filip
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Filip 2024-05-04 12:38:40 UTC
SUMMARY
Desktop wallpaper previews are shuffling infinitely in System Settings Wallpaper KCM when user selects
Wallpaper type: Slideshow and Order: Date modified (newest first)

STEPS TO REPRODUCE
1. Open System Settings Wallpaper KCM
2. Select Wallpaper type: Slideshow
3. Select Order: Date modified (newest first)

OBSERVED RESULT
Desktop wallpaper previews are shuffling infinitely

EXPECTED RESULT
Desktop wallpaper previews are sorted by Date modified (newest first)

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Kernel Version: 6.8.7-arch1-2 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-6600K CPU @ 3.50GHz
Memory: 7.7 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 970/PCIe/SSE2
Comment 1 Filip 2024-05-04 12:40:46 UTC
Created attachment 169185 [details]
bug-demonstration
Comment 2 Nate Graham 2024-05-05 02:56:17 UTC
Yikes, can confirm!
Comment 3 Fushan Wen 2024-05-29 13:22:37 UTC
Can reproduce, looks like a QtBug.
Comment 4 Bug Janitor Service 2024-05-29 15:12:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4371
Comment 5 Bug Janitor Service 2024-05-29 15:12:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4371
Comment 6 Fushan Wen 2024-05-30 08:13:37 UTC
Git commit 8d9b34a713b4509cd085d63bb60047464e5fa1fd by Fushan Wen.
Committed on 30/05/2024 at 08:13.
Pushed by fusionfuture into branch 'master'.

wallpapers/image: avoid using equal in model index comparison

Equal can confuse the sort filter model when 3 items have the same date.
For reversed order Qt swaps the left index and the right index internally,
so let's follow the best practice.
FIXED-IN: 6.1

M  +1    -1    wallpapers/image/plugin/slidefiltermodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/8d9b34a713b4509cd085d63bb60047464e5fa1fd
Comment 7 Fushan Wen 2024-05-30 08:48:36 UTC
Git commit 66222d167d4d6e97b2f1940bd6a316759f355247 by Fushan Wen.
Committed on 30/05/2024 at 08:14.
Pushed by fusionfuture into branch 'Plasma/6.1'.

wallpapers/image: avoid using equal in model index comparison

Equal can confuse the sort filter model when 3 items have the same date.
For reversed order Qt swaps the left index and the right index internally,
so let's follow the best practice.
FIXED-IN: 6.1


(cherry picked from commit 8d9b34a713b4509cd085d63bb60047464e5fa1fd)

Co-authored-by: Fushan Wen <qydwhotmail@gmail.com>

M  +1    -1    wallpapers/image/plugin/slidefiltermodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/66222d167d4d6e97b2f1940bd6a316759f355247