wallpapers/image: avoid using equal in model index comparison

Equal can confuse the sort filter model when 3 items have the same date.
For reversed order Qt swaps the left index and the right index internally,
so let's follow the best practice.

BUG: 486568
FIXED-IN: 6.1